--- a/infra/samconfig.toml
+++ b/infra/samconfig.toml
@@ -15,7 +15,8 @@ parameter_overrides = [
     "ApiTokenArn=arn:aws:ssm:eu-west-2:891376983144:parameter/gigs/crud_api_token",
     "GigsApiCertificateArn=arn:aws:acm:eu-west-2:891376983144:certificate/69fa8074-1e4a-4f05-83a0-2a00082cb731",
     "GigsApiAllowedOrigins=*", # TODO: think this isn't getting picked up - might be because of the use of comma separated list
-    "CognitoCallbackUrls=https://dev.giglist.rocks,http://localhost:4200"
+    "CognitoCallbackUrls=https://dev.giglist.rocks,http://localhost:4200",
+    "CognitionDomainAliasTarget=dqyecorio6lnw.cloudfront.net"
 ]
 
 [prod]
@@ -29,5 +30,6 @@ parameter_overrides = [
     "ApiTokenArn=arn:aws:ssm:eu-west-2:891376983144:parameter/gigs/crud_api_token",
     "GigsApiCertificateArn=CREATEME",
     "GigsApiAllowedOrigins=https://app.giglist.rocks",
-    "CognitoCallbackUrls=https://app.giglist.rocks"
+    "CognitoCallbackUrls=https://app.giglist.rocks",
+    "CognitionDomainAliasTarget=CREATEME.cloudfront.net"
 ]
