--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,7 +8,6 @@ permissions:
 
 jobs:
   lint:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -19,12 +18,13 @@ jobs:
         python-version: "3.12"
     - name: Set up SAM CLI
       uses: aws-actions/setup-sam@v2
-    - name: Setup Node.js environment
+    - name: Set up Node.js environment
       uses: actions/setup-node@v4
       with:
         node-version: "22.17"
     - name: Set up Angular dependencies
       run:
+        cd frontend
         npm ci
     - name: Install UV
       run: |
@@ -33,6 +33,7 @@ jobs:
     - name: Lint Python files
       run: |
         uv run ruff check
+    # TODO: run script insertion before linting
     - name: Lint SAM templates
       run: |
         sam validate --lint -t infra/template.yaml
