add ng lint to actions

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         node-version: "22.17"
     - name: Set up Angular dependencies
-      run: |...
+      run: |
         cd frontend
         npm ci
     - name: Install UV
