--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,7 +22,14 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: "22.17"
-    - name: Set up frontend dependencies
+    - name: Cache node modules
+      uses: actions/cache@v4
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+    - name: Set up node modules
       run: |
         cd frontend
         npm ci
