--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -22,13 +22,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.12"
-    - name: Cache Python dependencies
-      uses: actions/cache@v4
+    - name: Enable caching
+      uses: astral-sh/setup-uv@v6
       with:
-        path: ~/.venv
-        key: ${{ runner.os }}-python-${{ hashFiles('**/uv.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-python-
+        enable-cache: true
     - name: Install UV
       run: |
         python -m pip install --upgrade pip
