--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.12"
-    - name: Enable caching
+    - name: Cache Python dependencies
       uses: astral-sh/setup-uv@v6
       with:
         enable-cache: true
