--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,17 @@
 name: deploy
 
 on:
-  push:
-    branches:
-      - master
+  [push, pull_request]
+  # TODO: undo this after tested
+  #push:
+    #branches:
+     # - master
 
 permissions:
   contents: read
 
 jobs:
-  build:
-
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,10 +20,14 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.12"
-      - name: Install dependencies
+      - name: Cache Python dependencies
+        uses: astral-sh/setup-uv@v6
+        with:
+          enable-cache: true
+      - name: Install UV
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install uv
       - name: Set up SAM CLI
         uses: aws-actions/setup-sam@v2
       - name: Set up AWS credentials
@@ -32,9 +37,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-2
       - name: Build
-        run: sam build --use-container
+        run: |
+          cd infra
+          ./scripts/populate-sam-template.py -c ../functions/frontend_auth/app.js
+          sam build --use-container -t template.inlined.yaml
       # Prevent prompts and failure when the stack is unchanged
-      - name: Deploy
-        run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
+      - name: Deploy to dev
+        run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --config-env dev
       - name: Integration test
-        run: pytest tests/integration
+        run: uv run pytest tests/integration
